--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
-
 {% load static %}
-
-
-<html ng-app="SimpleERP">
+<html>
     <head>
         {# ### CSS ### #}
         {# Bootstrap Core #}
@@ -23,18 +20,6 @@
     <base href="/">
 
     <body>
-        <div class="container">
-            <h1>SimpleERP</h1>
-            <hr>
-        </div>
-
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3">
-                    {% include 'frontend/menu.html' %}
-                </div>
-                <div class="col-md-9" ng-view></div>
-            </div>
-        </div>
+      SimpleERP
     </body>
 </html>
