--- a/templates/costs/costs.html
+++ b/templates/costs/costs.html
@@ -31,7 +31,7 @@
           </tr>
         </thead>
 
-        <tbody>d 
+        <tbody>
           {% for ip in invoice_positions %}
             <tr>
               <td>{{ ip.invoice.invoice_number }}</td>
